# Malicious-MPSI

./: README.md  install.sh
installation/: CMakeLists.txt  CMakeLists_main.txt  install.sh
naive/: main.cpp
naive/src/: Bitstring.cpp  Functions.cpp  Functions.h  MurmurHash.h  P0.cpp  P0.h  Party.h  Pi.cpp  Pi.cpp.save  Pi.h  kos.cpp  util.cpp
simple/: CMakeLists.txt  cfg.txt  data.txt  main.cpp
simple/frontend/: CMakeLists.txt  Functions_test.cpp  main.cpp  tests.cpp
simple/src/: Bitstring.cpp  Bitstring.h  Functions.cpp  Functions.h  MurmurHash.cpp  P0.cpp  P0.h  Party.cpp  Party.h  Pi.cpp  Pi.h  kos.cpp  kos.h  util.h
